--- a/www/index.html
+++ b/www/index.html
@@ -10,6 +10,7 @@
             integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
             crossorigin="anonymous">
         </script>
+        <script src='jquery.exportToDoc.js'></script>
         <script
             src='https://cdnjs.cloudflare.com/ajax/libs/jquery-throttle-debounce/1.1/jquery.ba-throttle-debounce.min.js'>
         </script>
@@ -35,6 +36,10 @@
                 display: none;
                 width: 90%;
                 max-width: 800px;
+            }
+
+            #word, #excel {
+                display: none;
             }
         </style>
     </head>
@@ -80,6 +85,11 @@
                         <button id="search" type="button" class="pure-button pure-button-primary">Search</button>
                     </div>
                 </fieldset>
+                <iframe id="txtArea1" style="display:none"></iframe>
+                <div class='center'>
+                    <button id="doc" type="button" class="pure-button pure-button-primary">Export to Doc</button>    
+                </div>
+                <br/>
             </div>
         </div>
 
@@ -144,8 +154,13 @@
                             $('#results-storage').append(tr);
                         }
                         $('#results').show();
+                        $('#doc').show();
                     });
                 }));
+
+                $('#doc').on('click', () => {
+                    $("#results").exportToDoc();
+                });
             });
 
             function gatherInput() {
